<resources>
    <string name="app_name">Hospital App</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="to_continue_">To Continue , Login Now</string>
    <string name="forget_password">Forget Password?</string>
    <string name="welcome_back">welcome back !</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="specialist_doctor">Specialist - Doctor</string>
    <string name="salma_ahmed">Salma Ahmed</string>
    <string name="employee">employee</string>
    <string name="search_for_employee">Search for Employee</string>
    <string name="new_user">New User</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="phone_numberr">Phone Number</string>
    <string name="e_mail">E-mail</string>
    <string name="address">Address</string>

    <string name="gender">Gender</string>
    <string name="type">Type</string>
    <string name="status">Status</string>

    <string name="invalid_email_password">The email or password is incorrect</string>

    <string name="api_error">Failed to connect to the server. Please try again.</string>
    <string name="calls">Calls</string>
    <string name="create_call">Create Call</string>
    <string name="select_doctor">Select Doctor</string>
    <string name="case_description">Case Description</string>
    <string name="send_call">Send Call</string>
    <string name="search_for_doctors">Search for doctors</string>
    <string name="patient_name">Patient Name</string>
    <string name="case_details">Case Details</string>
    <string name="age">Age</string>
    <string name="date">Date</string>
    <string name="logout">Logout</string>


    <string-array name="gender_options">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>


    <string-array name="specialist_options">
        <item>Specialist</item>
        <item>doctor</item>
        <item>nurse</item>
        <item>receptionist</item>
        <item>manger</item>
        <item>laboratory Physician</item>
        <item>hr</item>
    </string-array>


    <string-array name="status_options">
        <item>Status</item>
        <item>Single</item>
        <item>Married</item>
    </string-array>


</resources>