<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.receptionist.CreateCallFragment">



    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/create_call"
        android:textColor="?attr/colorOnSurface"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_back"
        app:layout_constraintTop_toTopOf="@id/btn_back" />

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:src="@drawable/back"
        android:padding="@dimen/_4sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/_20sdp"
        app:tint="?attr/colorOnSurface" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PatientName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_22sdp"
        android:background="@drawable/background_spinner"
        android:backgroundTintMode="add"
        android:textColorHint="@color/gray"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/main_color"
        app:boxStrokeWidth="1.5sp"
        app:endIconMode="none"
        app:errorTextColor="@color/red"
        app:hintEnabled="false"
        app:hintTextColor="@color/main_color"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:placeholderText="@string/patient_name"
        app:startIconTint="@color/main_color"
       >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textPatientName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_spinner"
            android:drawablePadding="@dimen/_6sdp"
            android:drawableTint="@color/main_color"
            android:hint="@string/patient_name"
            android:inputType="text"
            android:singleLine="true"
            android:textColorHint="@color/gray" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_22sdp"
        android:background="@drawable/background_spinner"
        android:backgroundTintMode="add"
        android:textColorHint="@color/gray"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/main_color"
        app:boxStrokeWidth="1.5sp"
        app:endIconMode="none"
        app:errorTextColor="@color/red"
        app:hintEnabled="false"
        app:hintTextColor="@color/main_color"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/PatientName"
        app:placeholderText="Age"
        app:startIconTint="@color/main_color"
        tools:layout_editor_absoluteX="31dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_spinner"
            android:drawablePadding="@dimen/_6sdp"
            android:drawableTint="@color/main_color"
            android:hint="Age"
            android:inputType="number"
            android:singleLine="true"
            android:textColorHint="@color/gray" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_22sdp"
        android:background="@drawable/background_spinner"
        android:backgroundTintMode="add"
        android:textColorHint="@color/gray"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/main_color"
        app:boxStrokeWidth="1.5sp"
        app:endIconMode="none"
        app:errorTextColor="@color/red"
        app:hintEnabled="false"
        app:hintTextColor="@color/main_color"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/age"
        app:placeholderText="@string/first_name"
        app:startIconTint="@color/main_color"
        tools:layout_editor_absoluteX="31dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_spinner"
            android:drawablePadding="@dimen/_6sdp"
            android:drawableTint="@color/main_color"
            android:hint="@string/first_name"
            android:inputType="phone"
            android:singleLine="true"
            android:textColorHint="@color/gray" />


    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_22sdp"
        android:background="@drawable/background_spinner"
        android:clickable="true"
        android:drawablePadding="@dimen/_10sdp"
        android:focusable="true"
        android:hint="@string/select_doctor"
        android:maxLines="1"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:drawableEndCompat="@drawable/arrow_right"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PhoneNumber" />


    <TextView
        android:id="@+id/case_description"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginHorizontal="@dimen/_22sdp"
        android:background="@drawable/background_spinner"
        android:clickable="true"
        android:drawablePadding="@dimen/_10sdp"
        android:focusable="true"
        android:hint="@string/case_description"
        android:maxLines="1"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/birthday" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:backgroundTint="?attr/colorPrimary"
        android:paddingVertical="@dimen/_12sdp"
        android:text="@string/send_call"
        android:textColor="?attr/colorOnPrimary"
        app:cornerRadius="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_20sdp"
         />

</androidx.constraintlayout.widget.ConstraintLayout>